2009-03-17  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 1.0.4 and 1.0.5.
	* VERSION: change version to 1.0.5.

2009-03-11  KUBO Takehiro  <kubo@jiubao.org>
	* oraconf.rb: fix big/little endian checking problem on Mac OS X ppc.
	    (contributed by unknown. See: Bug ID 24284 on rubyforge.)

2009-02-08  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 1.0.3 and 1.0.4.
	* VERSION: change version to 1.0.4.
	* dist-files: add newly added file names which must be included
	    in gem or tar.gz packages.
	* metaconfig: follow the change of dbd/OCI8.rb location.

2009-02-01  KUBO Takehiro  <kubo@jiubao.org>
	* lib/dbd/OCI8.rb: add code for ruby-dbi 0.4 type conversion.
	* test/test_dbi.rb: suppress deprecated warnings while running
	    test_bind_dbi_data_type.
	* test/test_dbi_clob.rb: fix a problem when running this
	    file directly.

2009-01-31  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: fix for Oracle 11.1.0.7.0 instant
	    client rpm package. The directory tree is a bit different
	    with that of 11.1.0.6.0 or earlier.
	    (reported by Luis Parravicini.)

2009-01-31  KUBO Takehiro  <kubo@jiubao.org>
	* lib/DBD/OCI8/OCI8.rb: renamed to lib/dbd/OCI8.rb.
	* lib/dbd/OCI8.rb: 1. renamed from lib/DBD/OCI8/OCI8.rb
	    2. fix USED_DBD_VERSION from 0.2 to 0.4.
	    3. add DBI::DBD::OCI8.driver_name
	    (changes for ruby-dbi 0.4 contributed by James Cao.)

2008-12-30  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/handle.c, ext/oci8/oci8.h, ext/oci8/svcctx.c: add
	    OCISvcCtx.pid, which returns id of the process where the
	    OCISvcCtx is created.
	* lib/oci8.rb.in: add check code to ensure that the process id
	    is not changed.

2008-12-30  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/const.c, ext/oci8/handle.c: suppress compilation warnings.
	    (contributed by Daniel Berger)

2008-12-30  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: add code to check the cpu type of Mac OS X
	    libclntsh.dylib.
